index with price

--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
     </script>
   </head>
   <body class="font-bengali bg-brand-muted text-slate-900 antialiased">
+    <div class="bg-brand-dark text-emerald-100 text-sm">
+      <div class="mx-auto max-w-7xl px-4 py-2 text-center md:flex md:items-center md:justify-center md:gap-3">
+        <span class="inline-flex items-center justify-center gap-2 font-semibold text-white">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-4 w-4">
+            <path d="M11.47 3.84a.75.75 0 0 1 1.06 0l7.62 7.62a.75.75 0 0 1 0 1.06l-7.62 7.62a.75.75 0 0 1-1.06 0L3.85 12.52a.75.75 0 0 1 0-1.06l7.62-7.62Z"/>
+          </svg>
+          উইন্টার সেল চলছে
+        </span>
+        <span class="mt-1 block text-xs md:mt-0 md:text-sm">
+          সব বইতে <span class="font-semibold text-white">১৫% ছাড়</span> এবং বান্ডেল প্যাকে অতিরিক্ত <span class="font-semibold text-white">৩০% সেভিংস</span> — কোড ব্যবহার করুন <span class="font-semibold text-white">READWINTER</span>
+        </span>
+      </div>
+    </div>
     <div class="flex min-h-screen flex-col">
       <header class="sticky top-0 z-40 border-b border-slate-200 bg-white/95 shadow-sm backdrop-blur">
         <div
@@ -331,7 +344,13 @@
                   </div>
                   <h3 class="mt-2 text-lg font-semibold text-slate-900">উদ্যোক্তা মানসিকতার জয়</h3>
                   <p class="mt-1 text-sm text-slate-500">সামিউল রহমান</p>
-                  <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৪৫০</p>
+                  <div class="mt-4 space-y-1">
+                    <p class="text-sm text-slate-500">
+                      <span class="line-through text-slate-400">৳ ৫৩০</span>
+                      <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                    </p>
+                    <p class="text-lg font-semibold text-brand-dark">৳ ৪৫০</p>
+                  </div>
                   <button
                     class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                   >
@@ -354,7 +373,13 @@
                   <div class="text-xs font-semibold uppercase tracking-wide text-emerald-500">মোটিভেশন</div>
                   <h3 class="mt-2 text-lg font-semibold text-slate-900">প্রোডাক্টিভ জীবনের সোপান</h3>
                   <p class="mt-1 text-sm text-slate-500">রিমি হাসান</p>
-                  <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৩৯০</p>
+                  <div class="mt-4 space-y-1">
+                    <p class="text-sm text-slate-500">
+                      <span class="line-through text-slate-400">৳ ৪৬০</span>
+                      <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                    </p>
+                    <p class="text-lg font-semibold text-brand-dark">৳ ৩৯০</p>
+                  </div>
                   <button
                     class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                   >
@@ -377,7 +402,13 @@
                   <div class="text-xs font-semibold uppercase tracking-wide text-emerald-500">ইসলামী · নেতৃত্ব</div>
                   <h3 class="mt-2 text-lg font-semibold text-slate-900">আধুনিক ইসলামী নেতৃত্ব</h3>
                   <p class="mt-1 text-sm text-slate-500">ড. মাহমুদুল হক</p>
-                  <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৩২০</p>
+                  <div class="mt-4 space-y-1">
+                    <p class="text-sm text-slate-500">
+                      <span class="line-through text-slate-400">৳ ৩৮০</span>
+                      <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                    </p>
+                    <p class="text-lg font-semibold text-brand-dark">৳ ৩২০</p>
+                  </div>
                   <button
                     class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                   >
@@ -400,7 +431,13 @@
                   <div class="text-xs font-semibold uppercase tracking-wide text-sky-500">কম্পিউটার · দক্ষতা</div>
                   <h3 class="mt-2 text-lg font-semibold text-slate-900">ডাটা অ্যানালিটিক্স ১০১</h3>
                   <p class="mt-1 text-sm text-slate-500">ওয়াহিদ বিন জলিল</p>
-                  <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৫৯০</p>
+                  <div class="mt-4 space-y-1">
+                    <p class="text-sm text-slate-500">
+                      <span class="line-through text-slate-400">৳ ৬৯০</span>
+                      <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                    </p>
+                    <p class="text-lg font-semibold text-brand-dark">৳ ৫৯০</p>
+                  </div>
                   <button
                     class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                   >
@@ -477,7 +514,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-brand-primary">ব্যবসা</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">ফাইন্যান্স ফর বিগিনারস</h3>
                     <p class="mt-1 text-sm text-slate-500">আরাফাত চৌধুরী</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৫২০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৬১০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ৫২০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -502,7 +545,13 @@
                     </div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">সৃজনশীল রাইটিং ল্যাব</h3>
                     <p class="mt-1 text-sm text-slate-500">মৌমিতা দাস</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৩৪০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৪০০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ৩৪০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -525,7 +574,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-emerald-500">ইসলামী</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">নূরানী পথের দিশা</h3>
                     <p class="mt-1 text-sm text-slate-500">শায়খ আব্দুল হাদী</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ২৯০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৩৪০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ২৯০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -548,7 +603,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-sky-500">কম্পিউটার</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">টেক ক্যারিয়ার রোডম্যাপ</h3>
                     <p class="mt-1 text-sm text-slate-500">নাফিস আহমেদ</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৫৮০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৬৮০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ৫৮০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -571,7 +632,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-brand-primary">ব্যবসা</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">স্টার্টআপ পিচ ডেক</h3>
                     <p class="mt-1 text-sm text-slate-500">রওশন আরা</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৪৮০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৫৬০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ৪৮০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -594,7 +661,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-emerald-500">মোটিভেশন</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">মনে প্রাণে মোটিভেশন</h3>
                     <p class="mt-1 text-sm text-slate-500">তৃষা দত্ত</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৩২০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৩৮০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ৩২০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -617,7 +690,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-fuchsia-500">ফিকশন</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">গল্পে নবচেতনা</h3>
                     <p class="mt-1 text-sm text-slate-500">অনিন্দিতা সিনহা</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ২৭০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৩২০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ২৭০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -640,7 +719,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-sky-500">শিশু · বিজ্ঞান</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">শিশুদের বিজ্ঞান অভিযান</h3>
                     <p class="mt-1 text-sm text-slate-500">দেবাশীষ মিত্র</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ২১০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ২৫০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ২১০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -663,7 +748,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-sky-500">দক্ষতা · ডিজাইন</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">ডিজাইন থিংকিং ক্লাব</h3>
                     <p class="mt-1 text-sm text-slate-500">ফারিয়া সাবিকুন</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৪৬০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৫৪০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ৪৬০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -686,7 +777,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-brand-primary">ব্যবসা · মোটিভেশন</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">স্টোরিটেলিং ফর বিজনেস</h3>
                     <p class="mt-1 text-sm text-slate-500">ইমরান কবির</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৪৪০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৫২০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ৪৪০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -709,7 +806,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-emerald-500">মোটিভেশন</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">আত্মোন্নয়নের ১০ দিন</h3>
                     <p class="mt-1 text-sm text-slate-500">সাদিয়া শারমিন</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৩৬০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৪২০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ৩৬০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
@@ -732,7 +835,13 @@
                     <div class="text-xs font-semibold uppercase tracking-wide text-brand-primary">ব্যবসা</div>
                     <h3 class="mt-2 text-lg font-semibold text-slate-900">আর্থিক স্বাধীনতার কৌশল</h3>
                     <p class="mt-1 text-sm text-slate-500">রেদওয়ান হোসেন</p>
-                    <p class="mt-4 text-lg font-semibold text-brand-dark">৳ ৫৪০</p>
+                    <div class="mt-4 space-y-1">
+                      <p class="text-sm text-slate-500">
+                        <span class="line-through text-slate-400">৳ ৬৪০</span>
+                        <span class="ml-2 inline-flex items-center rounded-full bg-brand-light px-2 py-0.5 text-[11px] font-semibold text-brand-primary">১৫% ছাড়</span>
+                      </p>
+                      <p class="text-lg font-semibold text-brand-dark">৳ ৫৪০</p>
+                    </div>
                     <button
                       class="mt-auto inline-flex items-center justify-center rounded-full bg-brand-primary px-4 py-2 text-sm font-semibold text-white transition hover:bg-emerald-600"
                     >
