--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <p class="text-sm font-semibold uppercase tracking-wide text-brand-primary">ফিচার্ড</p>
                 <h2 class="text-3xl font-semibold text-slate-900">সপ্তাহের বেস্টসেলার</h2>
               </div>
-              <a href="#বই-সংগ্রহ" class="text-sm font-semibold text-brand-primary transition hover:text-brand-dark">
+              <a href="book-details.html" class="text-sm font-semibold text-brand-primary transition hover:text-brand-dark">
                 সমগ্র সংগ্রহ দেখুন →
               </a>
             </div>
